--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -26,30 +26,32 @@
 }
 
 #registerBtn {
-  width: 150px;
-  height: 35px;
+  width: 200px;
   margin: 0 auto;
-  margin-top: 20px;
-
-  color: white;
-  background-color: #b8b8ec;
-
-  border: 2px solid #b8b8ec;
-  border-radius: 7px;
 }
 
-.registerLabel {
-  margin-left: 75px;
-  margin-bottom: 3px;
+#loginBox > h1 {
+  margin: 0 auto;
+  margin-bottom: 25px;
 }
 
-.registerInput {
-  width: 350px;
-  height: 30px;
-
+#loginBox {
+  width: 500px;
   margin: 0 auto;
-  margin-bottom: 10px;
+  margin-top: 100px;
+  padding: 20px;
 
-  border: 1px solid;
-  border-radius: 5px;
+  border: 2px solid lavender;
+  border-radius: 20px;
+
+  box-shadow: 3px 3px 5px lavender;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#loginBtn {
+  width: 200px;
+  margin: 0 auto;
 }
