--- a/src/views/admin/admin-login.ejs
+++ b/src/views/admin/admin-login.ejs
@@ -5,15 +5,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="/js/admin-login.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/admin.css">
   <title>Document</title>
 </head>
 
 <body>
-  <div>
+  <div id="loginBox">
     <h1>ADMIN</h1>
-    <input type="text">
-    <input type="password">
-    <button>관리자 로그인</button>
+    <div class="mb-3">
+      <label for="inputAccount" class="form-label">아이디</label>
+      <input type="text" class="form-control" id="inputAccount">
+    </div>
+    <div class="mb-3">
+      <label for="inputPassword" class="form-label">비밀번호</label>
+      <input type="password" class="form-control" id="inputPassword"></input>
+    </div>
+    <button type="button" class="btn btn-primary" id="loginBtn">관리자 로그인</button>
   </div>
 </body>
 
