--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -15,10 +15,10 @@
   margin-top: 100px;
   padding: 20px;
 
-  border: 2px solid lavender;
+  border: 2px solid #ddd;
   border-radius: 20px;
 
-  box-shadow: 3px 3px 5px lavender;
+  box-shadow: 1px 1px 5px #ddd;
 
   display: flex;
   flex-direction: column;
@@ -41,10 +41,10 @@
   margin-top: 100px;
   padding: 20px;
 
-  border: 2px solid lavender;
+  border: 2px solid #ddd;
   border-radius: 20px;
 
-  box-shadow: 3px 3px 5px lavender;
+  box-shadow: 1px 1px 5px #ddd;
 
   display: flex;
   flex-direction: column;
@@ -54,4 +54,91 @@
 #loginBtn {
   width: 200px;
   margin: 0 auto;
+}
+
+#addProductBox > h1 {
+  margin: 0 auto;
+  margin-bottom: 25px;
+}
+
+#addProductBox {
+  width: 500px;
+  margin: 0 auto;
+  margin-top: 60px;
+  padding: 20px;
+
+  border: 2px solid #ddd;
+  border-radius: 20px;
+
+  box-shadow: 1px 1px 5px #ddd;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#inputDesc {
+  height: 150px;
+}
+
+#addProductBtn {
+  width: 200px;
+  margin: 0 auto;
+}
+
+#productsBox {
+  width: 1800px;
+  margin: 0 auto;
+  margin-top: 100px;
+  padding: 50px;
+
+  border: 2px solid #ddd;
+  border-radius: 20px;
+
+  box-shadow: 1px 1px 5px #ddd;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#productsBox > h1 {
+  margin-bottom: 20px;
+}
+
+#productsBox > #itemsHeader {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-bottom: 10px;
+  border-bottom: 2px solid #000;
+}
+
+.itemName,
+.itemImage,
+.itemPrice,
+.itemDesc,
+.itemQuantity,
+.itemEdit {
+  width: 150px;
+  text-align: center;
+}
+
+#productsBox > .items {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #333;
+}
+
+#productsBox > .items > .itemImage > img {
+  width: 100%;
 }
