--- a/src/views/admins/admin-edit-product.ejs
+++ b/src/views/admins/admin-edit-product.ejs
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="mb-3">
-        <label for="inputImage" class="form-label">썸네일 이미지</label>
+        <label for="inputImage" class="form-label">썸네일 이미지 변경</label>
         <input type="file" class="form-control" id="inputImage" name="inputImage">
       </div>
       <div class="mb-3">
