--- a/src/views/admins/admin-index.ejs
+++ b/src/views/admins/admin-index.ejs
@@ -10,6 +10,7 @@
     <button><a href="/admin_register">관리자 추가</a></button>
     <button><a href="/admin_login">관리자 로그인</a></button>
     <button><a href="/admin_add_product">상품 추가</a></button>
+    <button id="logoutBtn">로그아웃</button>
 
     <div id="productsBox">
       <h1>상품 리스트</h1>
