--- a/src/views/products/products-main.ejs
+++ b/src/views/products/products-main.ejs
@@ -19,18 +19,18 @@
   <div class="main-css">
     <h1>전자상거래</h1>
       <div class="btn-css">
-        <button class="my-btn btn btn-outline-info" ><a href="/products_detail">로그인</a></button>
-        <button class="my-btn btn btn-outline-info"><a href="/products_main">마이페이지</a></button>
-        <button class="my-btn btn btn-outline-info"><a href="/products_main">장바구니</a></button>
+        <button class="my-btn btn btn-outline-info" ><a href="/products">로그인</a></button>
+        <button class="my-btn btn btn-outline-info"><a href="/products">마이페이지</a></button>
+        <button class="my-btn btn btn-outline-info"><a href="/products">장바구니</a></button>
           <div class="btn-css2">
-            <button class="my-btn btn btn-outline-info"><a href="/products_main">회원가입</a></button>
-            <button class="my-btn btn btn-outline-info"><a href="/products_main">로그아웃</a></button>
+            <button class="my-btn btn btn-outline-info"><a href="/products">회원가입</a></button>
+            <button class="my-btn btn btn-outline-info"><a href="/products">로그아웃</a></button>
           </div>
       </div>
   </div>
   <hr>
   
-  <div id="products-main" class="products-box" >
+  <div id="products-main" class="products-main" >
   </div>
 </body>
 <script
