--- a/src/views/products/products-detail.ejs
+++ b/src/views/products/products-detail.ejs
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="/js/products-main.js"></script>
+  <script src="/js/products-detail.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   
@@ -16,19 +16,26 @@
 </head>
 
 <body>
-  <div class="main_css">
+  <div class="main-css">
     <h1>전자상거래</h1>
-      <div class="btn_css">
+      <div class="btn-css">
         <button class="my-btn btn btn-outline-info" ><a href="/products_detail">로그인</a></button>
         <button class="my-btn btn btn-outline-info"><a href="/products_main">마이페이지</a></button>
         <button class="my-btn btn btn-outline-info"><a href="/products_main">장바구니</a></button>
-          <div class="btn_css2">
+          <div class="btn-css2">
             <button class="my-btn btn btn-outline-info"><a href="/products_main">회원가입</a></button>
             <button class="my-btn btn btn-outline-info"><a href="/products_main">로그아웃</a></button>
           </div>
       </div>
   </div>
-  <div id="products_detail" class="products-box" ></div>
+  <hr>
+  
+  <div id="products-detail" class="products-detail-div" >
+  </div>
+  <div class="products-detail-btn-div">
+    <button type="button" class="products-detail-btn btn btn-outline-danger"><a href="/products">장바구니에 넣기</a></button>
+    <button type="button" class="products-detail-btn btn btn-outline-danger"><a href="/products">주문하기</a></button>
+  </div>
 </body>
 <script
 src="https://code.jquery.com/jquery-3.5.1.js"
