--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -122,7 +122,9 @@
 .itemPrice,
 .itemDesc,
 .itemQuantity,
-.itemEdit {
+.itemEdit,
+.orderUser,
+.orderStatus {
   width: 150px;
   text-align: center;
 }
@@ -146,4 +148,51 @@
 #editProductBtn {
   width: 200px;
   margin: 0 auto;
+}
+
+#orderBox {
+  width: 1800px;
+  margin: 0 auto;
+  margin-top: 100px;
+  padding: 50px;
+
+  border: 2px solid #ddd;
+  border-radius: 20px;
+
+  box-shadow: 1px 1px 5px #ddd;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#orderBox > h1 {
+  margin-bottom: 20px;
+}
+
+#orderBox > #itemsHeader {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-bottom: 10px;
+  border-bottom: 2px solid #000;
+}
+
+#orderBox > .items {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #333;
+}
+
+#orderBox > .items > .itemImage > img {
+  width: 100%;
 }
