--- a/src/views/mypage.ejs
+++ b/src/views/mypage.ejs
@@ -1,3 +1,4 @@
+<html>
 
 <head>
   <script>
@@ -5,73 +6,45 @@
     integrity = "sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=";
     crossorigin = "anonymous";</script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="/js/mypage.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/mypage.css">
   <title>마이페이지</title>
 </head>
-<!-- ///에이젝스로 append  -->
 
 
 <body>
-  <h1>마이페이지</h1>
-  <button><a href="/admin_index">주문신청</a></button>
-  <button><a href="/admin_register">주문내역</a></button>
-  <button><a href="/admin_login">로그아웃</a></button>
-  
+  <div class="main-css">
+    <h1>전자상거래</h1>
+    <div class="btn-css">
+      <button class="my-btn btn btn-outline-info"><a href="/products_detail">로그인</a></button>
+      <button class="my-btn btn btn-outline-info"><a href="/products_main">마이페이지</a></button>
+      <button class="my-btn btn btn-outline-info"><a href="/products_main">장바구니</a></button>
+      <div class="btn-css2">
+        <button class="my-btn btn btn-outline-info"><a href="/products_main">회원가입</a></button>
+        <button class="my-btn btn btn-outline-info"><a href="/products_main">로그아웃</a></button>
+      </div>
+    </div>
+  </div>
+  <hr>
 
-  <div id="mypage">
-    <h1>내 정보</h1>
-      <div class ="account">아이디<input id="accountInput" type="text"></div>
-      <div class="name">이름<input id="nameInput"  type="text"></div>
+  <div id="mypage" class="mypage">
+    <div class="mypage2">
+      <h1>내 정보</h1>
+      <div class="account">아이디<input id="accountInput" type="text"></div>
+      <div class="name">이름<input id="nameInput" type="text"></div>
       <div class="phonenumber">전화번호<input id="phoneInput" type="text"></div>
       <div class="address">주소<input id="addressInput" type="text"></div>
-
-      <table>
-    
-        <th>아이디</th>
-        <th>이름</th>
-        <th>전화번호</th>
-        <th>주소</th>
-        
-      
-      </table>
-      
     </div>
+  </div>
   </div>
 
 </body>
-<script>
-  //정보를 받을 수 있는지 없는지 판단
-  //로그인이 되어있다 가정함.
-  //페이지를 랜더링하면 ejs에서 브라우저가 읽고 보여주는 데 시간이 걸림
-  
- $(document).ready(function (){
-//dom이라는 객체가 있음. dom이 완성된 다음 아래 코드를 실행하라란 의미.
-//이러면 html 렌더링 되는 과정
-getmypage()
- }) 
- //페이지를 렌더하는 친구와 api를 구분하기
- //id를 이용해서 scirpt에서 직접 값을 넣어주는 것 
-  
-function getmypage() {
-    $.ajax({
-        type: "GET",
-        url: "/api/users",
-        data: {},
-        success: function (response) {
-          console.log(response.user)
-          const user = response.user
-          $("#accountInput").attr('value', user.account)
-          $("#nameInput").attr('value', user.name)
-          $("#phoneInput").attr('value', user.phone)
-          $("#addressInput").attr('value', user.address)
 
-          
-
-        
-        }
-    })
-}
-
-  </script>
 </html>
