--- a/src/views/products/products-main.ejs
+++ b/src/views/products/products-main.ejs
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   
-  <link rel="stylesheet" href="/css/admin.css">
+  <link rel="stylesheet" href="/css/products.css">
   <title>메인페이지</title>
 </head>
 
@@ -19,12 +19,12 @@
   <div class="main-css">
     <h1>전자상거래</h1>
       <div class="btn-css">
-        <button class="my-btn btn btn-outline-info" ><a href="/products">로그인</a></button>
-        <button class="my-btn btn btn-outline-info"><a href="/products">마이페이지</a></button>
-        <button class="my-btn btn btn-outline-info"><a href="/products">장바구니</a></button>
+        <button class="my-btn btn btn-outline-danger" onclick="login()">로그인</a></button>
+        <button class="my-btn btn btn-outline-danger" onclick="mypage()">마이페이지</a></button>
+        <button class="my-btn btn btn-outline-danger" >장바구니</a></button>
           <div class="btn-css2">
-            <button class="my-btn btn btn-outline-info"><a href="/products">회원가입</a></button>
-            <button class="my-btn btn btn-outline-info"><a href="/products">로그아웃</a></button>
+            <button class="my-btn btn btn-outline-danger" onclick="signup()">회원가입</a></button>
+            <button class="my-btn btn btn-outline-danger" onclick="logOut()">로그아웃</a></button>
           </div>
       </div>
   </div>
