--- a/src/views/carts/cart-show.ejs
+++ b/src/views/carts/cart-show.ejs
@@ -26,7 +26,7 @@
       </div> -->
     </div>
     <div class="container2" id="order">
-      <button type="button" class="btn btn-primary" id="buyBtn">주문하기</button>
+      <button type="button" class="buyBtn" id="buyBtn" onclick="order()">주문하기</button>
     </div>  
   </div>
 </body>
