--- a/src/public/css/cart.css
+++ b/src/public/css/cart.css
@@ -26,30 +26,59 @@
   justify-content: center;
 }
 .container1 {
+  width: 100%;
   display: flex;
-  height: 100px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-bottom: 10px;
+
 }
+
 .container2 {
+  width: 100%;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .img {
-  width: 200px;;
+  width: 150px;
+  text-align: center;
 }
 .name {
-  width: 400px;
+  width: 150px;
+  text-align: center;
 }
 .price {
   width: 150px;
+  text-align: center;
+}
+.quantityName{
+  width: 40px;
+  text-align: center;
 }
 .quantity {
-  width: 150px;
+  width: 50px;
+  text-align: center;
 }
 .productPrice {
   width: 150px;
+  text-align: center;
+
 }
 
 #buyBtn {
   width: 120px;
   margin: 0 auto;
+}
+.updateBtn {
+  width: 50px;
+  margin-left: 5px;
+}
+.deleteBtn {
+  width: 50px;
+  margin-left: 5px;
 }
