--- a/src/public/css/cart.css
+++ b/src/public/css/cart.css
@@ -4,7 +4,6 @@
   font-family: 'Do Hyeon', sans-serif;
 }
 
-
 #cartBox > h1 {
   margin: 0 auto;
   margin-bottom: 25px;
@@ -33,7 +32,6 @@
   align-items: center;
 
   margin-bottom: 10px;
-
 }
 
 .container2 {
@@ -48,6 +46,10 @@
   width: 150px;
   text-align: center;
 }
+
+.img > img {
+  width: 100%;
+}
 .name {
   width: 150px;
   text-align: center;
@@ -56,7 +58,7 @@
   width: 150px;
   text-align: center;
 }
-.quantityName{
+.quantityName {
   width: 40px;
   text-align: center;
 }
@@ -67,7 +69,6 @@
 .productPrice {
   width: 150px;
   text-align: center;
-
 }
 
 #buyBtn {
