--- a/src/public/css/order.css
+++ b/src/public/css/order.css
@@ -4,7 +4,6 @@
   font-family: 'Do Hyeon', sans-serif;
 }
 
-
 #orderBox > h1 {
   margin: 0 auto;
   margin-bottom: 25px;
@@ -39,12 +38,16 @@
 .container3 {
   display: flex;
 }
-.container3 > h2{
-  width:250px;
+.container3 > h2 {
+  width: 250px;
   margin-left: 30px;
 }
 .img {
-  width: 200px;;
+  width: 200px;
+}
+
+.img > img {
+  width: 100%;
 }
 .name {
   width: 400px;
