--- a/src/views/mypage.ejs
+++ b/src/views/mypage.ejs
@@ -15,20 +15,20 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/mypage.css">
-  <title>마이페이지</title>
+  <title>MyLoveMeat</title>
 </head>
 
 
 <body>
   <div class="main-css">
-    <h1>전자상거래</h1>
+    <h1>MyLoveMeat</h1>
     <div class="btn-css">
-      <button class="my-btn btn btn-outline-info"><a href="/products_detail">로그인</a></button>
-      <button class="my-btn btn btn-outline-info"><a href="/products_main">마이페이지</a></button>
-      <button class="my-btn btn btn-outline-info"><a href="/products_main">장바구니</a></button>
+      <button class="my-btn btn btn-outline-info"><a href="/user_login">로그인</a></button>
+      <button class="my-btn btn btn-outline-info"><a href="/mypage">마이페이지</a></button>
+      <button class="my-btn btn btn-outline-info"><a href="/cart_show">장바구니</a></button>
       <div class="btn-css2">
-        <button class="my-btn btn btn-outline-info"><a href="/products_main">회원가입</a></button>
-        <button class="my-btn btn btn-outline-info"><a href="/products_main">로그아웃</a></button>
+        <button class="my-btn btn btn-outline-info"><a href="/user_signup">회원가입</a></button>
+        <button class="my-btn btn btn-outline-danger" onclick="logOut()">로그아웃</a></button>
       </div>
     </div>
   </div>
