--- a/src/public/css/user.css
+++ b/src/public/css/user.css
@@ -26,7 +26,7 @@
 }
 
 #signupBtn {
-  width: 200px;
+  width: 150px;
   margin: 0 auto;
 }
 
@@ -52,6 +52,11 @@
 }
 
 #loginBtn {
-  width: 200px;
+  width: 150px;
   margin: 0 auto;
+}
+
+.btn{
+  display: flex;
+  justify-content: center;
 }
