--- a/src/views/users/user-login.ejs
+++ b/src/views/users/user-login.ejs
@@ -24,7 +24,10 @@
       <label for="password" class="form-label">비밀번호</label>
       <input type="password" class="form-control" id="password"></input>
     </div>
-    <button type="button" class="btn btn-primary" id="loginBtn">로그인</button>
+    <div class="btn">
+      <button type="button" class="btn btn-primary" id="loginBtn">로그인</button>
+      <button type="button" class="btn btn-primary" id="signupBtn" onclick="signup()">회원가입</button>
+    </div>
   </div>
 </body>
 
